force-app/main/default/objects/Product2/fields/Applied_to_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Applied_to_Postal_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applied to Postal Code</label>
    <type>Checkbox</type>
</CustomField>