force-app/main/default/objects/Product2/fields/Box_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Box_Dimensions__c</fullName>
    <label>Box Dimensions</label>
    <length>60</length>
    <type>Text</type>
</CustomField>