force-app/main/default/objects/Product2/fields/Contract_Clause_FR__c.field-meta.xml
<CustomField>
    <fullName>Contract_Clause_FR__c</fullName>
    <label>Contract Clause FR</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>