force-app/main/default/objects/Product2/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CR</fullName>
                <label>In ground Pool</label>
            </value>
            <value>
                <fullName>SC</fullName>
                <label>Semi in ground Pool</label>
            </value>
            <value>
                <fullName>HT</fullName>
                <label>Off ground Pool</label>
            </value>
            <value>
                <fullName>Spa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>