force-app/main/default/objects/Product2/fields/fdqsdfqs__c.field-meta.xml
<CustomField>
    <fullName>fdqsdfqs__c</fullName>
    <label>fdqsdfqs</label>
    <type>TextArea</type>
</CustomField>