force-app/main/default/objects/Product2/fields/Has_clause__c.field-meta.xml
<CustomField>
    <fullName>Has_clause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has clause</label>
    <type>Checkbox</type>
</CustomField>