force-app/main/default/objects/Product2/fields/Is_Transferable__c.field-meta.xml
<CustomField>
    <fullName>Is_Transferable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is transferable?</label>
    <type>Checkbox</type>
</CustomField>