force-app/main/default/objects/Product2/fields/Kitting_Item__c.field-meta.xml
<CustomField>
    <fullName>Kitting_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kitting Item</label>
    <type>Checkbox</type>
</CustomField>