force-app/main/default/objects/Product2/fields/Labor_Force_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Labor_Force_Warranty__c</fullName>
    <label>Labor Force in days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>