force-app/main/default/objects/Product2/fields/Major_Product__c.field-meta.xml
<CustomField>
    <fullName>Major_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Major Product</label>
    <type>Checkbox</type>
</CustomField>