force-app/main/default/objects/Product2/fields/Opening_Closing_Product__c.field-meta.xml
<CustomField>
    <fullName>Opening_Closing_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opening Closing Product</label>
    <type>Checkbox</type>
</CustomField>