force-app/main/default/objects/Product2/fields/Product_and_Installation_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Product_and_Installation_Warranty__c</fullName>
    <label>Product and Installation Warranty</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>