force-app/main/default/objects/Product2/fields/Product_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Product_Dimensions__c</fullName>
    <label>Product Dimensions</label>
    <length>60</length>
    <type>Text</type>
</CustomField>