force-app/main/default/objects/Product2/fields/Product_Name_EN__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_EN__c</fullName>
    <label>Product Name EN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>