force-app/main/default/objects/Product2/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessoire</fullName>
            </value>
            <value>
                <fullName>Aucun</fullName>
            </value>
            <value>
                <fullName>Base de poussière de pierre</fullName>
            </value>
            <value>
                <fullName>Cartouche</fullName>
            </value>
            <value>
                <fullName>Céramique</fullName>
            </value>
            <value>
                <fullName>Chauffe-eau</fullName>
            </value>
            <value>
                <fullName>Chimique</fullName>
            </value>
            <value>
                <fullName>Chlorinateur</fullName>
            </value>
            <value>
                <fullName>Clôture</fullName>
            </value>
            <value>
                <fullName>Couronnement</fullName>
            </value>
            <value>
                <fullName>Couvert</fullName>
            </value>
            <value>
                <fullName>Drain de fond</fullName>
            </value>
            <value>
                <fullName>Échelle</fullName>
            </value>
            <value>
                <fullName>Échelle/rampe</fullName>
            </value>
            <value>
                <fullName>Écumoire</fullName>
            </value>
            <value>
                <fullName>Équipement</fullName>
            </value>
            <value>
                <fullName>Filtreur</fullName>
            </value>
            <value>
                <fullName>Fond de béton</fullName>
            </value>
            <value>
                <fullName>Fontaine</fullName>
            </value>
            <value>
                <fullName>Garantie</fullName>
            </value>
            <value>
                <fullName>Gasket</fullName>
            </value>
            <value>
                <fullName>Gazébo</fullName>
            </value>
            <value>
                <fullName>Glissade</fullName>
            </value>
            <value>
                <fullName>Gunite</fullName>
            </value>
            <value>
                <fullName>In-touch</fullName>
            </value>
            <value>
                <fullName>Insertion</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Isolant</fullName>
            </value>
            <value>
                <fullName>Jet</fullName>
            </value>
            <value>
                <fullName>Jupe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>