force-app/main/default/objects/Product2/fields/Spa_Size__c.field-meta.xml
<CustomField>
    <fullName>Spa_Size__c</fullName>
    <label>Spa Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>size13</fullName>
                <label>13&quot;</label>
            </value>
            <value>
                <fullName>size16</fullName>
                <label>16&quot;</label>
            </value>
            <value>
                <fullName>size17</fullName>
                <label>17&quot;</label>
            </value>
            <value>
                <fullName>size18</fullName>
                <label>18&quot;</label>
            </value>
            <value>
                <fullName>size19</fullName>
                <label>19&quot;</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>