force-app/main/default/objects/Product2/fields/Spa_Type__c.field-meta.xml
<CustomField>
    <fullName>Spa_Type__c</fullName>
    <label>Spa Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>acrylicSpa</fullName>
                <label>Acrylic spa</label>
            </value>
            <value>
                <fullName>swimSpa</fullName>
                <label>Swim spa</label>
            </value>
            <value>
                <fullName>natureSpa</fullName>
                <label>Nature spa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>