force-app/main/default/objects/Product2/fields/Sub_Family__c.field-meta.xml
<CustomField>
    <fullName>Sub_Family__c</fullName>
    <label>Sub-Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Raw materials</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Above ground pool structures</fullName>
            </value>
            <value>
                <fullName>Above ground pool walls</fullName>
            </value>
            <value>
                <fullName>Above ground pool components</fullName>
            </value>
            <value>
                <fullName>A.g. (structure, wall and liner)</fullName>
            </value>
            <value>
                <fullName>Above ground pool liners</fullName>
            </value>
            <value>
                <fullName>In ground pool components</fullName>
            </value>
            <value>
                <fullName>In ground pools</fullName>
            </value>
            <value>
                <fullName>In ground pool liners</fullName>
            </value>
            <value>
                <fullName>Spas</fullName>
            </value>
            <value>
                <fullName>Parts / Accessories / Spas</fullName>
            </value>
            <value>
                <fullName>Filtration</fullName>
            </value>
            <value>
                <fullName>Robots</fullName>
            </value>
            <value>
                <fullName>Pool heater</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Beach items</fullName>
            </value>
            <value>
                <fullName>Life-saving</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Car shelters</fullName>
            </value>
            <value>
                <fullName>Ice rinks</fullName>
            </value>
            <value>
                <fullName>Outdooring</fullName>
            </value>
            <value>
                <fullName>Installation &amp; delivery</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Trévi furniture</fullName>
            </value>
            <value>
                <fullName>Paving stone</fullName>
            </value>
            <value>
                <fullName>x</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>