force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>Sage_ID__c</columns>
    <columns>Stock_Item__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Work_Type__c</columns>
    <columns>Is_Transferable__c</columns>
    <columns>Nationex_Allowed__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>Service_Type__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les produits</label>
</ListView>