force-app/main/default/objects/Product2/listViews/Produits_avec_garantie.listView-meta.xml
<ListView>
    <fullName>Produits_avec_garantie</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>Sage_ID__c</columns>
    <columns>Stock_Item__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Sub_Family__c</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Work_Type__c</columns>
    <columns>Is_Transferable__c</columns>
    <columns>Product_Warranty__c</columns>
    <columns>Product_and_Installation_Warranty__c</columns>
    <columns>Labor_Force_Warranty__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>Service_Type__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Warranty__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Labor_Force_Warranty__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Product_and_Installation_Warranty__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Produits avec garantie</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>