force-app/main/default/objects/Product2/listViews/Produits_avec_type_de_travail.listView-meta.xml
<ListView>
    <fullName>Produits_avec_type_de_travail</fullName>
    <columns>Sage_ID__c</columns>
    <columns>Stock_Item__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Work_Type__c</columns>
    <columns>Is_Transferable__c</columns>
    <columns>Nationex_Allowed__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>Service_Type__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Work_Type__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Produits avec type de travail</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>