force-app/main/default/objects/Product2/listViews/Produits_de_garantie.listView-meta.xml
<ListView>
    <fullName>Produits_de_garantie</fullName>
    <columns>Sage_ID__c</columns>
    <columns>Stock_Item__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Sub_Family__c</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Work_Type__c</columns>
    <columns>Is_Transferable__c</columns>
    <columns>Nationex_Allowed__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>Service_Type__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Type__c</field>
        <operation>equals</operation>
        <value>Garantie</value>
    </filters>
    <label>Produits de garantie</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>